# polars-bio

./: .gitignore  .pre-commit-config.yaml  404.html  BAM_CRAM_WRITE_IMPLEMENTATION_COMPLETE.md  BAM_TAG_WRITE_RESOLVED.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  IMPLEMENTATION_SUMMARY_BAM_WRITE.md  Jupiter_V3.ipynb  Jupyter_V4.ipynb  Makefile  README.md  Zapis_genomow_decoded.md  base_sequence_quality_demo.ipynb  demo_bam_write_api.py  index.html  kmer_benchmark.py  mkdocs.yml  objects.inv  output_big.html  pyproject.toml  sitemap.xml  sprawozdanie.ipynb  test_bam_write_comprehensive.py  test_file.py  test_kmers.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: benchmark.yml  benchmark_manual.yml  claude-code-review.yml  claude.yml  publish_documentation.yml  publish_to_pypi.yml  release.yml  tests.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
api/: index.html
api/auxiliary/: index.html
api/operations/: index.html
api/reading/: index.html
api/sql/: index.html
api/writing/: index.html
benchmark/: run_bench.ipynb
benchmark-comparison/: index.html
benchmark-comparison/datafusion-50-3-0/: index.html
benchmark-comparison/fix-preserve-benchmark-data-gh-pages/: index.html
benchmark-data/: index.json
benchmark-scripts/: bench_wallcpu.sh  both2.sh  correctness_verify.sh  gen_post.py  lim_nokmer.txt  matched_bench2.sh  matched_results.LAST.tsv  mem_grid.NEW212.LAST.txt  mem_measure.sh  mem_results.NEW212.LAST.txt  parse_all.py  parse_drift.py  pb_mem.py  pb_one.py  pb_reps.py  pb_wallcpu.py  pbk.sh  pbt2.py  rebin_compare.py  reps.sh  rq_scaling.sh  run_all.sh  run_drift.sh  thread_invariance.sh  wallcpu_results.NEW212.LAST.tsv
benchmark/queries/: 0-3.sql
benchmark/src/: base_seq_quality.py  base_seq_quality_report.py  bench_nearest.py  bench_nearest_parallel.py  bench_overlap.py  bench_overlap_dataframes_parallel.py  bench_overlap_parallel.py  report_full.html
benchmarks/: 01_general_performance.py  02_memory_profiling.py  03_thread_scalability.py  04_projection_pruning.py  05_predicate_pushdown.py  06_combined_optimizations.py  benchmark_results.json  compare_benchmark_results.sh  generate_comparison_charts.py  generate_interactive_comparison.py  visualize_results.py
benchmarks/fastqc/: bench.py  parity.py
bioconda-recipe/: meta.yaml
blog/: index.html
cockbook/: index.html
contact/: index.html
cookbook/: index.html
developers/: index.html
docs/: api.md  cookbook.md  developers.md  faq.md  features.md  index.md  performance.md  quickstart.md  supplement.md  talks.md
docs/api/: auxiliary.md  index.md  operations.md  reading.md  sql.md  writing.md
docs/features/: cloud.md  dataframes.md  index.md  operations.md  parallel.md  reading.md  sql.md  writing.md
docs/notebooks/: base_quality.ipynb  base_sequence_quality.ipynb  best_sequence_quality.ipynb  cookbook.ipynb  example.csv  min_example.fastq  raport.ipynb  report.html  tutorial.ipynb
docs/stylesheets/: extra.css
faq/: index.html
features/: index.html
features/cloud/: index.html
features/dataframes/: index.html
features/operations/: index.html
features/parallel/: index.html
features/reading/: index.html
features/sql/: index.html
features/writing/: index.html
it/: README.md  it_io.py  it_object_storage_io.py
notebooks/: feature_counting_benchmark.ipynb  vcf_zarr_benchmark.ipynb  vcf_zarr_small_benchmark.ipynb
openspec/: project.md
performance/: index.html
polars_bio/: __init__.py  _metadata.py  _streaming.py  annotations.py  base_quality.py  base_sequence_quality.py  base_sequence_quality_viz.py  base_sequnce_quality_vis.py  config.py  constants.py  context.py  count_overlaps.py  coverage.py  exceptions.py  fastqc_op.py  interval_op_helpers.py  io.py  kmer_analysis.py  logging.py  merge.py  metadata_extractors.py  nearest.py  overlap.py  pileup_op.py  polars_ext.py  predicate_translator.py  pushdown.py  qc_op.py  qc_op_helpers.py  qc_utils.py  quality_op.py  quality_stats.py  range_op.py  range_op_helpers.py  range_op_io.py  range_utils.py  range_viz.py  range_wrappers.py  sql.py  test-helpers.py  (+3 more)
quickstart/: index.html
scripts/: bench_sql_partitions.py  benchmark_genotype_processing.py  convert_benchmarks_to_json.py  generate_dataframe_paths_benchmark_figures.py  update_benchmark_index.py  with_pl_and_ds_3_2_explode.py  with_pl_and_ds_polars_list.py  with_pl_and_ds_sql.py
search/: search_index.json
src/: aggregate.rs  base_quality.rs  base_sequence_quality.rs  context.rs  count_overlaps.rs  fastq.rs  fastqc.rs  kmer.rs  lib.rs  nearest.rs  operation.rs  operation_helpers.rs  option.rs  overlap.rs  pileup.rs  quality.rs  quality_udaf.rs  quantile_stats.rs  query.rs  scan.rs  sequence_quality_histogram.rs  streaming.rs  udaf.rs  udtf.rs  utils.rs  vcf_udfs.rs  write.rs
supplement/: index.html
talks/: index.html
tests/: _expected.py  conftest.py  test_annotations.py  test_base_quality.py  test_base_sequence_quality.py  test_bcftools.py  test_bioframe.py  test_complement.py  test_comprehensive_metadata.py  test_coordinate_system_metadata.py  test_custom_tag_inference.py  test_ensembl_parsing.py  test_ensembl_vcf_parsing.py  test_execution_plan_validation.py  test_fasta_write.py  test_fastq_write.py  test_fastqc.py  test_fastqc_correctness.py  test_fastqc_golden.py  test_fastqc_parity.py  test_filter_select_attributes_bug_fix.py  test_gff_eager_vs_lazy.py  test_io.py  test_io_bam.py  test_io_bbi.py  test_io_bbi_parity.py  test_io_bbi_streaming.py  test_io_bed.py  test_io_cram.py  test_io_fasta.py  test_io_fastq.py  test_io_gff.py  test_io_gtf.py  test_io_indexed.py  test_io_pairs.py  test_io_vcf.py  test_io_vep_cache.py  test_issue_395_eager_lazy_segfault.py  test_lazy_streaming_fix.py  test_lazyframe_partitioning.py  (+38 more)
(+535 files in other folders)
