[package]
name = "polars_bio"
version = "0.32.0"
edition = "2021"

[features]
# Opt-in jemalloc global allocator (issue #402). Off by default.
# Enable with `--features jemalloc` on Linux/macOS; it is a no-op on Windows/MSVC
# (tikv-jemallocator does not support the MSVC target), which keeps the system
# allocator there. Benchmarks: ~12% faster and lower peak RSS vs the default
# allocator on the single-thread interval-operation suite.
jemalloc = ["dep:tikv-jemallocator"]

[lib]
name = "polars_bio"
crate-type= ["cdylib"]




[dependencies]
datafusion-python = { version = "53.0.0", default-features = false }
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3"] }
pyo3-log = "0.13.3"
# Optional jemalloc allocator, gated behind the `jemalloc` feature (see [features]).
tikv-jemallocator = { version = "0.6", optional = true }


# NOTE: temporarily pinned to 53.0.0 (down from 53.1.0) to match datafusion-bio-formats
# v1.8.2 / datafusion-bio-functions v0.11.0, which pin datafusion to "=53.0.0". Restore
# 53.1.0 once those crates publish releases built against datafusion 53.1.0.
datafusion = { version = "53.0.0", default-features = false, features = ["nested_expressions", "crypto_expressions", "datetime_expressions", "encoding_expressions", "regex_expressions", "string_expressions", "unicode_expressions", "parquet", "recursive_protection", "sql"] }
arrow = "58.3.0"
arrow-schema = "58.3.0"
arrow-array = { version = "58.3.0", features = ["ffi"] }
tokio = {version = "1.42.0", features = ["full", "tracing"]}
log = "0.4.22"
tracing = { version = "0.1.41", features = ["log"] }
futures-util = "0.3.31"

datafusion-bio-format-vcf = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.6" }
datafusion-bio-format-core = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.6" }
datafusion-bio-format-gff = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.6" }
datafusion-bio-format-fastq = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.6" }
datafusion-bio-format-bam = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.6" }
datafusion-bio-format-cram = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.6" }
datafusion-bio-format-bed = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.6" }
datafusion-bio-format-fasta = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.6" }
datafusion-bio-format-pairs = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.6" }
datafusion-bio-format-gtf = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.6" }
datafusion-bio-format-bbi = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.6" }

datafusion-bio-function-ranges = { git = "https://github.com/biodatageeks/datafusion-bio-functions.git", tag = "v0.11.0" }
datafusion-bio-function-pileup = { git = "https://github.com/biodatageeks/datafusion-bio-functions.git", tag = "v0.11.0", default-features = false }

async-trait = "0.1.86"
futures = "0.3.31"
rand = "0.8.5"
serde_json = "1.0"
