[package]
name = "polars_bio"
version = "0.32.0"
edition = "2021"

[features]
# Global allocator selection (issue #402). Exactly one is compiled in.
#
# `mimalloc` is ON BY DEFAULT: it restores the allocator polars-bio <=0.31 got for
# free via datafusion-python's default features, which 0.32 lost when it set
# `default-features = false` on datafusion-python — regressing allocation-heavy
# BAM/VCF reads by ~15-45% at one thread. mimalloc is pinned to v2 (v3 segfaults at
# import on macOS arm64).
#
# To use jemalloc instead (faster on some interval-operation workloads):
#   maturin build --release --no-default-features --features jemalloc
# jemalloc is unsupported on Windows/MSVC; there the build falls back to mimalloc.
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:tikv-jemallocator"]

[lib]
name = "polars_bio"
crate-type= ["cdylib"]




[dependencies]
datafusion-python = { version = "53.0.0", default-features = false }
# Global allocators, selected via the [features] above (mimalloc default-on).
# Both optional so exactly one is linked; enabling neither keeps the system allocator.
mimalloc = { version = "0.1", default-features = false, features = ["v2"], optional = true }
tikv-jemallocator = { version = "0.6", optional = true }
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3"] }
pyo3-log = "0.13.3"


# NOTE: temporarily pinned to 53.0.0 (down from 53.1.0) to match datafusion-bio-formats
# v1.8.2 / datafusion-bio-functions v0.11.0, which pin datafusion to "=53.0.0". Restore
# 53.1.0 once those crates publish releases built against datafusion 53.1.0.
datafusion = { version = "53.0.0", default-features = false, features = ["nested_expressions", "crypto_expressions", "datetime_expressions", "encoding_expressions", "regex_expressions", "string_expressions", "unicode_expressions", "parquet", "recursive_protection", "sql"] }
arrow = "58.3.0"
arrow-schema = "58.3.0"
arrow-array = { version = "58.3.0", features = ["ffi"] }
tokio = {version = "1.42.0", features = ["full", "tracing"]}
log = "0.4.22"
tracing = { version = "0.1.41", features = ["log"] }
futures-util = "0.3.31"

datafusion-bio-format-vcf = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.7" }
datafusion-bio-format-core = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.7" }
datafusion-bio-format-gff = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.7" }
datafusion-bio-format-fastq = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.7" }
datafusion-bio-format-bam = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.7" }
datafusion-bio-format-cram = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.7" }
datafusion-bio-format-bed = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.7" }
datafusion-bio-format-fasta = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.7" }
datafusion-bio-format-pairs = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.7" }
datafusion-bio-format-gtf = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.7" }
datafusion-bio-format-bbi = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", tag = "v1.8.7" }

datafusion-bio-function-ranges = { git = "https://github.com/biodatageeks/datafusion-bio-functions.git", tag = "v0.11.0" }
datafusion-bio-function-pileup = { git = "https://github.com/biodatageeks/datafusion-bio-functions.git", tag = "v0.11.0", default-features = false }
# Pinned to the Phase-1 FastQC branch head (biodatageeks/datafusion-bio-functions#182).
# Switch to a git tag once that PR is tagged/released.
datafusion-bio-function-fastqc = { git = "https://github.com/biodatageeks/datafusion-bio-functions.git", rev = "d6463cf2ec970b8ed0890545bbf0c7129a60a42c" }

async-trait = "0.1.86"
futures = "0.3.31"
rand = "0.8.5"
serde_json = "1.0"

